feat: v26.2.1 fixes and README updates